<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:visibility="visible">

    <EditText
        android:id="@+id/editText_first_name"
        android:layout_width="165sp"
        android:layout_height="62sp"
        android:layout_marginStart="5sp"
        android:layout_marginTop="148sp"
        android:layout_marginBottom="559sp"
        android:paddingLeft="15sp"
        android:background="@android:color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/placeholder_first_name_input"
        android:textColor="@color/colorBlack"
        android:textColorHighlight="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        android:textColorLink="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editText_last_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editText_last_name"
        android:layout_width="165sp"
        android:layout_height="62sp"
        android:layout_marginStart="350sp"
        android:layout_marginTop="148sp"
        android:layout_marginEnd="155sp"
        android:layout_marginBottom="559sp"
        android:paddingLeft="15sp"
        android:background="@android:color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/placeholder_last_name_input"
        android:textColor="@color/colorBlack"
        android:textColorHighlight="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        android:textColorLink="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="356sp"
        android:layout_height="62sp"
        android:layout_marginTop="52sp"
        android:background="@android:color/white"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingLeft="15sp"
        android:text="@string/placeholder_email_address_input"
        android:textColor="@color/colorBlack"
        android:textColorHighlight="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        android:textColorLink="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="@+id/editText_last_name"
        app:layout_constraintStart_toStartOf="@+id/editText_first_name"
        app:layout_constraintTop_toBottomOf="@+id/editText_first_name" />

    <EditText
        android:id="@+id/editText_github_link"
        android:layout_width="356sp"
        android:layout_height="62sp"
        android:layout_marginTop="52sp"
        android:background="@android:color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="15sp"
        android:text="@string/placeholder_github_link"
        android:textColor="@color/colorBlack"
        android:textColorHighlight="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        android:textColorLink="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="@+id/editText_email"
        app:layout_constraintStart_toStartOf="@+id/editText_email"
        app:layout_constraintTop_toBottomOf="@+id/editText_email" />

    <Button
        android:id="@+id/button_to_submit_form"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:background="@drawable/button_for_submission"
        android:text="@string/submission_button_label"
        android:textAllCaps="false"
        android:textAppearance="@style/textTitle.appTitle"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorLink="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/editText_github_link"
        app:layout_constraintStart_toStartOf="@+id/editText_github_link"
        app:layout_constraintTop_toBottomOf="@+id/editText_github_link" />


</androidx.constraintlayout.widget.ConstraintLayout>